# rust-playground

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migration/src/: lib.rs  m20241223_085007_dept_table.rs  m20241223_085012_emp_table.rs
src/: error.rs  main.rs  middleware.rs  services.rs  state.rs
src/entities/: dept.rs  emp.rs  mod.rs  prelude.rs
src/services/: dept_service.rs  emp_service.rs
