[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = { version = "1.0.94", features = ["backtrace"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
once_cell = "1.20.2"
regex = "1.11.1"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.8"
time = "0.3.37"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time", "fmt", "std"] }
validator = { version = "0.19.0", features = ["derive"] }
